# ai-coder-finally

./: .env.example  CLAUDE.md  Dockerfile  README.md
.claude-plugin/: marketplace.json
.claude/agents/: reviewer.md
.claude/commands/: doc-review.md
backend/: demo.py  pyproject.toml
backend/app/: database.py  main.py  utils.py
backend/app/llm/: client.py  context.py
backend/app/market_data/: __init__.py  interface.py  simulator.py  tapetide.py
backend/app/routes/: chat.py  portfolio.py  stock.py  stream.py  watchlist.py
backend/app/tasks/: snapshot.py
backend/schema/: schema.sql  seed.py
backend/tests/: conftest.py  test_chat.py  test_database.py  test_factory.py  test_health.py  test_interface.py  test_llm.py  test_portfolio.py  test_simulator.py  test_snapshot.py  test_stream.py  test_tapetide.py  test_watchlist.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  Header.tsx  MainChart.tsx  PnLChart.tsx  PortfolioHeatmap.tsx  PositionsTable.tsx  StockDetail.tsx  TradeBar.tsx  WatchlistPanel.tsx
independent-reviewer/.claude-plugin/: plugin.json
independent-reviewer/hooks/: hooks.json
planning/: MARKET_DATA_CODE_REVIEW.md  Massive_API.md  PLAN.md  impl_plan.md  market_data_design.md  market_interface.md  plan-REVIEW.md  review.md
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
test/: docker-compose.test.yml
test/e2e/: app.spec.ts  package-lock.json  package.json  playwright.config.ts
